[metadata]
name = pyautotester
version = attr: pyautotester.__version__
author = Igor Souza
author_email = igormcsouza@gmail.com

description = A module to automatically run unit tests against the code at every change.
long_description = file: README.md

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers

[options]
zip_safe = True
packages = find:
python_requires = >=3.9
install_requires =
    watchdog==2.1.6

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    autotest = pyautotester.main:main
